set up space kit

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,7 @@
 
 <body>
   <div id="root"></div>
+  <div id="sim"></div>
+  <script src="/spacekit.js"></script>
   <script src="/index.js"></script>
 </body>
