added button framework

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <head>
   <title>Internet on Mars!</title>
+  <style>
+    body {
+      height: 500%;
+      background-color: black;
+    }
+
+    #sim {
+      width: 100%;
+      height: 85vh;
+    }
+
+    .sim-info {
+      position: fixed;
+      right: 0;
+      background-color:#ccc;
+      padding: 1em;
+    }
+  </style>
 </head>
 
 <body>
