--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <style>
     body {
       height: 500%;
-      background-color: black;
+      /* background-color: black; */
     }
 
     #sim {
