Added styling and main header

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <style>
     body {
       height: 500%;
-      /* background-color: black; */
+      background-color: black;
     }
 
     #sim {
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+  <div style="width: 100%;">
+    <img src="internetonmars.png"  width="600" height="100" style='z-index: 3; margin-left: 25%'>
+  </div>
   <div id="root"></div>
   <div id="sim"></div>
   <script src="/spacekit.js"></script>
